--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
