--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -16,6 +19,7 @@
     "@types/react-dom": "^18.0.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "neumorphism-react": "^1.1.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
