--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "neumorphism-react": "^1.1.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
