--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
