--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.3.4",
     "react-transition-group": "^4.4.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
