--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.3.4",
     "react-transition-group": "^4.4.2",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
