--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
