--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^7.2.1",
     "neumorphism-react": "^1.1.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
