--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
+    "@zattoo/use-double-click": "^1.2.0",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
